--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dialect Woordenboek</title>
+    <title>Woordenboek van het Asses</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
     <style>
@@ -15,7 +15,7 @@
 
     <div class="max-w-3xl mx-auto p-4 md:p-8">
         <header class="text-center mb-10">
-            <h1 class="text-5xl font-extrabold text-blue-800 mb-2">Ons Dialect</h1>
+            <h1 class="text-5xl font-extrabold text-blue-800 mb-2">Woordenboek van het Asses</h1>
             <p class="text-gray-500 text-lg">Doorzoek ons digitaal erfgoed van 11.000+ woorden.</p>
         </header>
 
