--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woordenboek van het Asses</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
         :root {
@@ -34,7 +34,7 @@
 
         /* Glazen effect voor de sticky header */
         .sticky-header {
-            background-color: rgba(18, 18, 18, 0.8);
+            background-color: rgba(18, 18, 18, 0.85);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
@@ -45,6 +45,7 @@
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: var(--bg-main); }
         ::-webkit-scrollbar-thumb { background: #333; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #444; }
     </style>
 </head>
 <body class="font-sans leading-normal tracking-normal pb-20">
@@ -75,20 +76,30 @@
         const searchInput = document.getElementById('searchInput');
         const statusDiv = document.getElementById('status');
 
+        // 1. Laad het JSON bestand
         fetch('words.json')
             .then(response => response.json())
             .then(data => {
                 const options = {
-                    keys: ['word', 'description'],
+                    keys: [
+                        { name: 'word', weight: 2 },        // Woord is belangrijker
+                        { name: 'description', weight: 0.5 } // Betekenis is minder belangrijk
+                    ],
                     threshold: 0.3,
                     includeMatches: true,
+                    includeScore: true, // Nodig voor de aangepaste sortering
                     useExtendedSearch: true
                 };
                 fuse = new Fuse(data, options);
                 statusDiv.innerText = `${data.length.toLocaleString('nl-NL')} woorden geladen`;
                 resultsDiv.innerHTML = '<p class="text-center text-gray-500 mt-10 text-lg">Typ een woord om te beginnen.</p>';
+            })
+            .catch(err => {
+                statusDiv.innerText = "Fout bij laden.";
+                console.error(err);
             });
 
+        // Hulpfunctie voor highlighting
         function highlight(text, matches) {
             if (!matches) return text;
             const indices = matches.flatMap(m => m.indices).sort((a, b) => b[0] - a[0]);
@@ -102,6 +113,7 @@
             return highlightedText;
         }
 
+        // De zoekfunctie
         searchInput.addEventListener('input', (e) => {
             const query = e.target.value.trim();
             if (query.length < 2) {
@@ -110,13 +122,36 @@
             }
 
             const processedQuery = query.split(' ').filter(w => w.length > 0).map(w => `'${w}`).join(' ');
-            const results = fuse.search(processedQuery);
+            let results = fuse.search(processedQuery);
             
+            // --- AANGEPASTE SORTERING ---
+            results.sort((a, b) => {
+                const aWord = a.item.word.toLowerCase();
+                const bWord = b.item.word.toLowerCase();
+                const q = query.toLowerCase();
+
+                // 1. Exacte match in het veld 'word' moet altijd bovenaan
+                const aExact = aWord === q;
+                const bExact = bWord === q;
+                if (aExact && !bExact) return -1;
+                if (!aExact && bExact) return 1;
+
+                // 2. Woorden die BEGINNEN met de zoekterm
+                const aStarts = aWord.startsWith(q);
+                const bStarts = bWord.startsWith(q);
+                if (aStarts && !bStarts) return -1;
+                if (!aStarts && bStarts) return 1;
+
+                // 3. Val terug op de standaard Fuse-score (rekening houdend met weights)
+                return a.score - b.score;
+            });
+
             if (results.length === 0) {
                 resultsDiv.innerHTML = `<div class="text-center mt-10 text-gray-400 font-medium">Geen resultaten voor "${query}"</div>`;
                 return;
             }
 
+            // Render resultaten
             resultsDiv.innerHTML = results.slice(0, 100).map(result => {
                 const wordMatches = result.matches.filter(m => m.key === 'word');
                 const descMatches = result.matches.filter(m => m.key === 'description');
