--- a/index.html
+++ b/index.html
@@ -23,16 +23,10 @@
         
         .results-container { min-height: 200px; }
 
-        /* De highlight styling */
-        mark {
-            background-color: rgba(59, 130, 246, 0.3);
-            color: #60a5fa;
-            border-radius: 4px;
-            padding: 0 2px;
-            font-style: normal;
-        }
+        /* Styling voor de HTML markup die al in je JSON staat */
+        u { text-decoration-color: var(--accent-blue); text-underline-offset: 4px; }
+        b, strong { color: #fff; font-weight: 700; }
 
-        /* Glazen effect voor de sticky header */
         .sticky-header {
             background-color: rgba(18, 18, 18, 0.85);
             backdrop-filter: blur(12px);
@@ -45,7 +39,6 @@
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-track { background: var(--bg-main); }
         ::-webkit-scrollbar-thumb { background: #333; border-radius: 10px; }
-        ::-webkit-scrollbar-thumb:hover { background: #444; }
     </style>
 </head>
 <body class="font-sans leading-normal tracking-normal pb-20">
@@ -76,44 +69,24 @@
         const searchInput = document.getElementById('searchInput');
         const statusDiv = document.getElementById('status');
 
-        // 1. Laad het JSON bestand
         fetch('words.json')
             .then(response => response.json())
             .then(data => {
                 const options = {
                     keys: [
-                        { name: 'word', weight: 2 },        // Woord is belangrijker
-                        { name: 'description', weight: 0.5 } // Betekenis is minder belangrijk
+                        { name: 'word', weight: 2 },
+                        { name: 'description', weight: 0.5 }
                     ],
                     threshold: 0.3,
-                    includeMatches: true,
-                    includeScore: true, // Nodig voor de aangepaste sortering
+                    includeScore: true,
                     useExtendedSearch: true
+                    // includeMatches is hier verwijderd omdat we WordDisplay gebruiken
                 };
                 fuse = new Fuse(data, options);
                 statusDiv.innerText = `${data.length.toLocaleString('nl-NL')} woorden geladen`;
                 resultsDiv.innerHTML = '<p class="text-center text-gray-500 mt-10 text-lg">Typ een woord om te beginnen.</p>';
-            })
-            .catch(err => {
-                statusDiv.innerText = "Fout bij laden.";
-                console.error(err);
             });
 
-        // Hulpfunctie voor highlighting
-        function highlight(text, matches) {
-            if (!matches) return text;
-            const indices = matches.flatMap(m => m.indices).sort((a, b) => b[0] - a[0]);
-            let highlightedText = text;
-            indices.forEach(([start, end]) => {
-                highlightedText = 
-                    highlightedText.substring(0, start) + 
-                    '<mark>' + highlightedText.substring(start, end + 1) + '</mark>' + 
-                    highlightedText.substring(end + 1);
-            });
-            return highlightedText;
-        }
-
-        // De zoekfunctie
         searchInput.addEventListener('input', (e) => {
             const query = e.target.value.trim();
             if (query.length < 2) {
@@ -124,25 +97,22 @@
             const processedQuery = query.split(' ').filter(w => w.length > 0).map(w => `'${w}`).join(' ');
             let results = fuse.search(processedQuery);
             
-            // --- AANGEPASTE SORTERING ---
+            // Sortering op basis van de verborgen 'word' kolom
             results.sort((a, b) => {
                 const aWord = a.item.word.toLowerCase();
                 const bWord = b.item.word.toLowerCase();
                 const q = query.toLowerCase();
 
-                // 1. Exacte match in het veld 'word' moet altijd bovenaan
                 const aExact = aWord === q;
                 const bExact = bWord === q;
                 if (aExact && !bExact) return -1;
                 if (!aExact && bExact) return 1;
 
-                // 2. Woorden die BEGINNEN met de zoekterm
                 const aStarts = aWord.startsWith(q);
                 const bStarts = bWord.startsWith(q);
                 if (aStarts && !bStarts) return -1;
                 if (!aStarts && bStarts) return 1;
 
-                // 3. Val terug op de standaard Fuse-score (rekening houdend met weights)
                 return a.score - b.score;
             });
 
@@ -151,24 +121,19 @@
                 return;
             }
 
-            // Render resultaten
-            resultsDiv.innerHTML = results.slice(0, 100).map(result => {
-                const wordMatches = result.matches.filter(m => m.key === 'word');
-                const descMatches = result.matches.filter(m => m.key === 'description');
-
-                return `
+            resultsDiv.innerHTML = results.slice(0, 100).map(result => `
                 <div class="bg-[#1e1e1e] p-6 rounded-2xl shadow-lg border border-gray-800 hover:border-blue-900 transition-all group">
                     <div class="flex flex-col">
                         <span class="text-2xl font-bold text-blue-400 group-hover:text-blue-300 transition-colors">
-                            ${highlight(result.item.word, wordMatches)}
+                            ${result.item.wordDisplay || result.item.word}
                         </span>
                         <div class="h-1 w-10 bg-blue-900 my-2 rounded group-hover:w-20 transition-all duration-300"></div>
                         <p class="text-gray-300 text-lg italic leading-relaxed">
-                            ${highlight(result.item.description, descMatches)}
+                            ${result.item.descriptionDisplay || result.item.description}
                         </p>
                     </div>
-                </div>`;
-            }).join('');
+                </div>
+            `).join('');
 
             statusDiv.innerText = `${results.length} resultaten gevonden`;
         });
